# mypublicip

./: .gitlab-ci.yml  README.md  pyproject.toml
mypublicip/: LICENSE  pyproject.toml  setup.py
mypublicip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mypublicip/mypublicip/: mypublicip.py
