[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypublicip"
version = "0.1.0"
description = "A module to retrieve the public IP address of the current connection."
authors = [{ name = "Jeremie Rouzet", email = "your_email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
keywords = ["public ip", "ip address", "network"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
mypublicip = "mypublicip.mypublicip:main"
